# SlackBot

./: .env.example  .gitignore  google_oauth_client_secret.json  main.py  pyproject.toml
.secrets/: google_calendar_token.json
app/: bot.py
app/ai/: agent.py  client.py  gemini_agent.py  lmstudio_agent.py  openai_agent.py  tool_dispatch.py  tool_manifest.py  tools.py
app/data/: schema_introspect.py  sources.py
app/handlers/: messages.py
app/integrations/: google_calendar.py
app/utils/: formatting.py  slack_renderer.py
flight-design-ai_lab/: .gitignore  README.md  ai.py  database.py  main.py  pyproject.toml
flight-design-ai_lab/Data Files/: employee_list.csv  project.csv
flight-design-ai_lab/templates/: actions.html  base.html  capacity.html  chat.html  dashboard.html  upload.html
flight-design-ai_lab/templates/partials/: _filter_bar.html  action_result.html  capacity_data.html  chat_bubble.html  dashboard_data.html
mock_data/: employee_list.csv  schedule.csv  tools_manifest.json
mock_data.bak/: calendar.csv  contracts.csv  invoices.csv  projects.csv  time_entries.csv
